--- a/lab2.html
+++ b/lab2.html
@@ -6,7 +6,7 @@
     <title>Lab2</title>
 </head>
 <body>
-    <a href="http://cs3.calstatela.edu/~cs3220stu47/BoxOffice.html">Box Office</a>
+    <a href="http://cs3.calstatela.edu/~cs3220stu47/index.html">Box Office</a>
     <a href="http://cs3.calstatela.edu/~cs3220stu47/csula.html">Cal State LA</a>
 </body>
 </html>
