New Template uploaded

--- a/Lab2/AddMovie.html
+++ b/Lab2/AddMovie.html
@@ -6,7 +6,7 @@
     <title>Add Movie</title>
 </head>
 <body>
-    <h1><a href="index.html">Box Office</a> &gtAdd Movie</h1>
+    <h1><a href="BoxOffice.html">Box Office </a> &gt Add Movie</h1>
     <form action="">
         <table border="1" cellpadding="2">
             <tr>
